solution/nginx-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
  name: website
  namespace: website
spec:
  ports:
    - name: port-1
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: port-2
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: website
  type: ClusterIP
